overflow issue fixed

--- a/styles/contact_style.css
+++ b/styles/contact_style.css
@@ -45,7 +45,7 @@ body {
 }
 
 
-@media only screen and (min-width: 601px) and (max-width: 767px) {
+@media only screen and (min-width: 620px) and (max-width: 767px) {
 
     #map,
     #contact {
