--- a/styles/style.css
+++ b/styles/style.css
@@ -101,7 +101,7 @@ a:visited {
 
 header {
     font-family: "Cormorant Garamond", serif;
-    font-size: 1.5rem;
+    font-size: 1.4rem;
     grid-column: 1/-1;
     grid-row: 1/span 1;
     background-color: var(--header-footer-color);
